# agentscope

./: .all-contributorsrc  .buildinfo  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc  CMakeLists.txt  CNAME  LICENSE  README.md  README_JA.md  README_ZH.md  README_zh.md  agentscope.agents.html  agentscope.configs.html  agentscope.html  agentscope.memory.html  agentscope.models.html  agentscope.pipelines.html  agentscope.rpc.html  agentscope.service.code.html  agentscope.service.execute_code.html  agentscope.service.file.html  agentscope.service.html  agentscope.service.retrieval.html  agentscope.service.sql_query.html  agentscope.service.text_processing.html  agentscope.service.web_search.html  agentscope.utils.html  agentscope.web.html  agentscope.web_ui.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
_modules/: agentscope.html  index.html
_sources/: agentscope.configs.rst.txt  agentscope.service.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: language_switch.js
api/: agentscope.agent.html  agentscope.embedding.html  agentscope.evaluate.html  agentscope.exception.html  agentscope.formatter.html  agentscope.hooks.html  agentscope.html  agentscope.mcp.html  agentscope.memory.html  agentscope.message.html  agentscope.model.html  agentscope.module.html  agentscope.pipeline.html  agentscope.session.html  agentscope.token.html  agentscope.tool.html  agentscope.tracing.html  agentscope.types.html  modules.html
build_api/: agentscope.agents.agent.html  agentscope.agents.dialog_agent.html  agentscope.agents.dict_dialog_agent.html  agentscope.agents.html  agentscope.agents.operator.html  agentscope.agents.rag_agent.html  agentscope.agents.react_agent.html  agentscope.agents.user_agent.html  agentscope.constants.html  agentscope.environment.env.html  agentscope.environment.event.html  agentscope.environment.html  agentscope.exception.html  agentscope.formatters.html  agentscope.html  agentscope.logging.html  agentscope.manager.html  agentscope.memory.html  agentscope.memory.memory.html  agentscope.memory.temporary_memory.html  agentscope.message.block.html  agentscope.message.html  agentscope.message.msg.html  agentscope.models.anthropic_model.html  agentscope.models.dashscope_model.html  agentscope.models.gemini_model.html  agentscope.models.html  agentscope.models.litellm_model.html  agentscope.models.model.html  agentscope.models.ollama_model.html  agentscope.models.openai_model.html  agentscope.models.post_model.html  agentscope.models.response.html  agentscope.models.yi_model.html  agentscope.models.zhipu_model.html  agentscope.msghub.html  agentscope.parsers.code_block_parser.html  agentscope.parsers.html  agentscope.parsers.json_object_parser.html  (+79 more)
build_tutorial/: MCP.html  (+22 more)
src/agentscope/cpp_server/: CMakeLists.txt  __init__.py  makefile  rpc_agent_servicer.cc  worker.cc  worker.h
src/agentscope/rpc/: CMakeLists.txt  __init__.py  retry_strategy.py  rpc_agent.proto  rpc_agent_client.py  rpc_agent_pb2.py  rpc_agent_pb2_grpc.py  rpc_async.py  rpc_client.py  rpc_config.py  rpc_meta.py  rpc_object.py  worker_args.proto
(+4199 files in other folders)
